--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,20 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+config
+description
+HEAD
+.idea/misc.xml
+.idea/modules.xml
+hooks/applypatch-msg.sample
+hooks/commit-msg.sample
+hooks/fsmonitor-watchman.sample
+hooks/post-update.sample
+hooks/pre-applypatch.sample
+hooks/pre-commit.sample
+hooks/pre-push.sample
+hooks/pre-rebase.sample
+hooks/pre-receive.sample
+hooks/prepare-commit-msg.sample
+hooks/update.sample
+info/exclude
