--- a/cinematiccountdownview/build.gradle
+++ b/cinematiccountdownview/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 apply plugin: 'kotlin-android'
+
+final VERSION_NAME = "0.1"
 
 android {
   compileSdkVersion 27
@@ -10,7 +13,7 @@ android {
     minSdkVersion 15
     targetSdkVersion 27
     versionCode 1
-    versionName "1.0"
+    versionName VERSION_NAME
 
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
@@ -28,4 +31,13 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+
+publish {
+  userOrg = 'lvla'
+  groupId = 'com.moyuru'
+  artifactId = 'cinematiccountdownview'
+  publishVersion = VERSION_NAME
+  desc = 'Cinematic countdown view'
+  website = 'https://github.com/MoyuruAizawa/CinematicCountdownView'
 }
